--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -4,14 +4,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{{ title }}</title>
-	<link rel="stylesheet" href="{{ '/css/style.css' | url }}" />
+	<link rel="stylesheet" href="{{ '/css/main.css' | url }}" />
 </head>
 <body>
-	<header>
-		<h1>{{ title }}</h1>
+  <header class="o-box c-header">
+		{% include "partials/nav.njk" %}
 	</header>
-	<main>
-	{{ content | safe }}
+	<main class="o-box"> 
+		<article class=" o-centre">
+		<h1>{{ title }}</h1>
+		{{ content | safe }}
+		</article>
 	</main>
 </body>
 </html>
