--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,20 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>{{ title }}</title>
-	<link rel="stylesheet" href="{{ '/css/main.css' | url }}" />
-</head>
+{% include "partials/masterHead.njk" %}
+
 <body>
-  <header class="o-box c-header">
+  {#
+	<header class="o-box c-header mb-2xl">
 		{% include "partials/nav.njk" %}
 	</header>
-	<main class="o-box"> 
-		<article class=" o-centre">
-		<h1>{{ title }}</h1>
-		{{ content | safe }}
+	#}
+
+	<main> 
+	{% block main %}
+		<article class="o-box o-centre">
+			<h1>{{ title }}</h1>
+			{{ content | safe }}
 		</article>
+	{% endblock %}
 	</main>
 </body>
 </html>
