--- a/src/sass/_05-utilities/_spacing.scss
+++ b/src/sass/_05-utilities/_spacing.scss
@@ -1,87 +1,105 @@
 /* SPACING
 ===========================================
 ===========================================*/
-/* .padding\:0   { padding: 0; } */
-/* .padding\:xs  { padding: var(--spacing-xs); } */
-/* .padding\:s   { padding: var(--spacing-s); } */
-/* .padding\:m   { padding: var(--spacing-m); } */
-/* .padding\:l   { padding: var(--spacing-l); } */
-/* .padding\:xl  { padding: var(--spacing-xl); } */
-/* .padding\:2xl { padding: var(--spacing-2xl); } */
-/* .padding\:3xl { padding: var(--spacing-3xl); } */
+.p-0   { padding: 0; }
+.p-xs  { padding: var(--spacing-xs); }
+.p-s   { padding: var(--spacing-s); }
+.p-m   { padding: var(--spacing-m); }
+.p-l   { padding: var(--spacing-l); }
+.p-xl  { padding: var(--spacing-xl); }
+.p-2xl { padding: var(--spacing-2xl); }
+.p-3xl { padding: var(--spacing-3xl); }
 
-/* .padding-left\:0   { padding-left: 0; } */
-/* .padding-left\:xs  { padding-left: var(--spacing-xs); } */
-/* .padding-left\:s   { padding-left: var(--spacing-s); } */
-/* .padding-left\:m   { padding-left: var(--spacing-m); } */
-/* .padding-left\:l   { padding-left: var(--spacing-l); } */
-/* .padding-left\:xl  { padding-left: var(--spacing-xl); } */
-/* .padding-left\:2xl { padding-left: var(--spacing-2xl); } */
-/* .padding-left\:3xl { padding-left: var(--spacing-3xl); } */
+.pl-0   { padding-left: 0; }
+.pl-xs  { padding-left: var(--spacing-xs); }
+.pl-s   { padding-left: var(--spacing-s); }
+.pl-m   { padding-left: var(--spacing-m); }
+.pl-l   { padding-left: var(--spacing-l); }
+.pl-xl  { padding-left: var(--spacing-xl); }
+.pl-2xl { padding-left: var(--spacing-2xl); }
+.pl-3xl { padding-left: var(--spacing-3xl); }
 
-/* .padding-right\:0   { padding-right: 0; } */
-/* .padding-right\:xs  { padding-right: var(--spacing-xs); } */
-/* .padding-right\:s   { padding-right: var(--spacing-s); } */
-/* .padding-right\:m   { padding-right: var(--spacing-m); } */
-/* .padding-right\:l   { padding-right: var(--spacing-l); } */
-/* .padding-right\:xl  { padding-right: var(--spacing-xl); } */
-/* .padding-right\:2xl { padding-right: var(--spacing-2xl); } */
-/* .padding-right\:3xl { padding-right: var(--spacing-3xl); } */
+.pr-0   { padding-right: 0; }
+.pr-xs  { padding-right: var(--spacing-xs); }
+.pr-s   { padding-right: var(--spacing-s); }
+.pr-m   { padding-right: var(--spacing-m); }
+.pr-l   { padding-right: var(--spacing-l); }
+.pr-xl  { padding-right: var(--spacing-xl); }
+.pr-2xl { padding-right: var(--spacing-2xl); }
+.pr-3xl { padding-right: var(--spacing-3xl); }
 
-/* .padding-bottom\:0   { padding-bottom: 0; } */
-/* .padding-bottom\:xs  { padding-bottom: var(--spacing-xs); } */
-/* .padding-bottom\:s   { padding-bottom: var(--spacing-s); } */
-.padding-bottom\:m   { padding-bottom: var(--spacing-m); }
-.padding-bottom\:l   { padding-bottom: var(--spacing-l); }
-.padding-bottom\:xl  { padding-bottom: var(--spacing-xl); }
-.padding-bottom\:2xl { padding-bottom: var(--spacing-2xl); }
-.padding-bottom\:3xl { padding-bottom: var(--spacing-3xl); }
+.pb-0   { padding-bottom: 0; }
+.pb-xs  { padding-bottom: var(--spacing-xs); }
+.pb-s   { padding-bottom: var(--spacing-s); }
+.pb-m   { padding-bottom: var(--spacing-m); }
+.pb-l   { padding-bottom: var(--spacing-l); }
+.pb-xl  { padding-bottom: var(--spacing-xl); }
+.pb-2xl { padding-bottom: var(--spacing-2xl); }
+.pb-3xl { padding-bottom: var(--spacing-3xl); }
 
-/* .padding-top\:0   { padding-top: 0; } */
-/* .padding-top\:xs  { padding-top: var(--spacing-xs); } */
-/* .padding-top\:s   { padding-top: var(--spacing-s); } */
-.padding-top\:m   { padding-top: var(--spacing-m); }
-.padding-top\:l   { padding-top: var(--spacing-l); }
-.padding-top\:xl  { padding-top: var(--spacing-xl); }
-.padding-top\:2xl { padding-top: var(--spacing-2xl); }
-.padding-top\:3xl { padding-top: var(--spacing-3xl); }
+.pt-0   { padding-top: 0; }
+.pt-xs  { padding-top: var(--spacing-xs); }
+.pt-s   { padding-top: var(--spacing-s); }
+.pt-m   { padding-top: var(--spacing-m); }
+.pt-l   { padding-top: var(--spacing-l); }
+.pt-xl  { padding-top: var(--spacing-xl); }
+.pt-2xl { padding-top: var(--spacing-2xl); }
+.pt-3xl { padding-top: var(--spacing-3xl); }
 
-/* .margin\:0    { margin: 0; } */
-/* .margin\:s    { margin: var(--spacing-s); } */
-/* .margin\:m    { margin: var(--spacing-m); } */
-/* .margin\:l    { margin: var(--spacing-l); } */
-/* .margin\:xl   { margin: var(--spacing-xl); } */
-/* .margin\:2xl  { margin: var(--spacing-2xl); } */
-/* .margin\:3xl  { margin: var(--spacing-3xl); } */
+.ph-0   { padding-left: 0; padding-right: 0; }
+.ph-xs  { padding-left: var(--spacing-xs); padding-right: var(--spacing-xs); }
+.ph-s   { padding-left: var(--spacing-s); padding-right: var(--spacing-s); }
+.ph-m   { padding-left: var(--spacing-m); padding-right: var(--spacing-m); }
+.ph-l   { padding-left: var(--spacing-l); padding-right: var(--spacing-l); }
+.ph-xl  { padding-left: var(--spacing-xl); padding-right: var(--spacing-xl); }
+.ph-2xl { padding-left: var(--spacing-2xl); padding-right: var(--spacing-2xl); }
+.ph-3xl { padding-left: var(--spacing-3xl); padding-right: var(--spacing-3xl); }
 
-/* .margin-left\:0    {  margin-left: 0; } */
-/* .margin-left\:s   {  margin-left: var(--spacing-s); } */
-/* .margin-left\:m    {  margin-left: var(--spacing-m); } */
-/* .margin-left\:l    {  margin-left: var(--spacing-l); } */
-/* .margin-left\:xl   {  margin-left: var(--spacing-xl); } */
-/* .margin-left\:2xl  {  margin-left: var(--spacing-2xl); } */
-/* .margin-left\:3xl {  margin-left: var(--spacing-3xl); } */
+.pv-0   { padding-bottom: 0; padding-top: 0; }
+.pv-xs  { padding-bottom: var(--spacing-xs); padding-top: var(--spacing-xs); }
+.pv-s   { padding-bottom: var(--spacing-s); padding-top: var(--spacing-s); }
+.pv-m   { padding-bottom: var(--spacing-m); padding-top: var(--spacing-m); }
+.pv-l   { padding-bottom: var(--spacing-l); padding-top: var(--spacing-l); }
+.pv-xl  { padding-bottom: var(--spacing-xl); padding-top: var(--spacing-xl); }
+.pv-2xl { padding-bottom: var(--spacing-2xl); padding-top: var(--spacing-2xl); }
+.pv-3xl { padding-bottom: var(--spacing-3xl); padding-top: var(--spacing-3xl); }
 
-/* .margin-right\:0    {  margin-right: 0; } */
-/* .margin-right\:s   {  margin-right: var(--spacing-s); } */
-/* .margin-right\:m    {  margin-right: var(--spacing-m); } */
-/* .margin-right\:l    {  margin-right: var(--spacing-l); } */
-/* .margin-right\:xl   {  margin-right: var(--spacing-xl); } */
-/* .margin-right\:2xl  {  margin-right: var(--spacing-2xl); } */
-/* .margin-right\:3xl {  margin-right: var(--spacing-3xl); } */
+.m-0    { margin: 0; }
+.m-s    { margin: var(--spacing-s); }
+.m-m    { margin: var(--spacing-m); }
+.m-l    { margin: var(--spacing-l); }
+.m-xl   { margin: var(--spacing-xl); }
+.m-2xl  { margin: var(--spacing-2xl); }
+.m-3xl  { margin: var(--spacing-3xl); }
 
-/* .margin-bottom\:0    {  margin-bottom: 0; } */
-/* .margin-bottom\:s   {  margin-bottom: var(--spacing-s); } */
-/* .margin-bottom\:m    {  margin-bottom: var(--spacing-m); } */
-/* .margin-bottom\:l    {  margin-bottom: var(--spacing-l); } */
-/* .margin-bottom\:xl   {  margin-bottom: var(--spacing-xl); } */
-/* .margin-bottom\:2xl  {  margin-bottom: var(--spacing-2xl); } */
-/* .margin-bottom\:3xl {  margin-bottom: var(--spacing-3xl); } */
+.ml-0    {  margin-left: 0; }
+.ml-s    {  margin-left: var(--spacing-s); }
+.ml-m    {  margin-left: var(--spacing-m); }
+.ml-l    {  margin-left: var(--spacing-l); }
+.ml-xl   {  margin-left: var(--spacing-xl); }
+.ml-2xl  {  margin-left: var(--spacing-2xl); }
+.ml-3xl  {  margin-left: var(--spacing-3xl); }
 
-/* .margin-top\:0    {  margin-top: 0; } */
-/* .margin-top\:s   {  margin-top: var(--spacing-s); } */
-/* .margin-top\:m    {  margin-top: var(--spacing-m); } */
-/* .margin-top\:l    {  margin-top: var(--spacing-l); } */
-/* .margin-top\:xl   {  margin-top: var(--spacing-xl); } */
-/* .margin-top\:2xl  {  margin-top: var(--spacing-2xl); } */
-/* .margin-top\:3xl {  margin-top: var(--spacing-3xl); } */
+.mr-0    {  margin-right: 0; }
+.mr-s    {  margin-right: var(--spacing-s); }
+.mr-m    {  margin-right: var(--spacing-m); }
+.mr-l    {  margin-right: var(--spacing-l); }
+.mr-xl   {  margin-right: var(--spacing-xl); }
+.mr-2xl  {  margin-right: var(--spacing-2xl); }
+.mr-3xl  {  margin-right: var(--spacing-3xl); }
+
+.mb-0    {  margin-bottom: 0; }
+.mb-s    {  margin-bottom: var(--spacing-s); }
+.mb-m    {  margin-bottom: var(--spacing-m); }
+.mb-l    {  margin-bottom: var(--spacing-l); }
+.mb-xl   {  margin-bottom: var(--spacing-xl); }
+.mb-2xl  {  margin-bottom: var(--spacing-2xl); }
+.mb-3xl  {  margin-bottom: var(--spacing-3xl); }
+
+.mt-0    {  margin-top: 0; }
+.mt-s    {  margin-top: var(--spacing-s); }
+.mt-m    {  margin-top: var(--spacing-m); }
+.mt-l    {  margin-top: var(--spacing-l); }
+.mt-xl   {  margin-top: var(--spacing-xl); }
+.mt-2xl  {  margin-top: var(--spacing-2xl); }
+.mt-3xl  {  margin-top: var(--spacing-3xl); }
