--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -16,8 +16,8 @@
   --spacing-3xl: 4rem;  
 
 
-  --font-base: Georgia, 'helvetica neue', helvetica, arial, sans-serif;
-  --font-accent: system-ui, 'helvetica neue', helvetica, arial, sans-serif;
+  --font-base: 'Rubik', 'helvetica neue', helvetica, arial, sans-serif;
+  --font-accent: 'Rubik', 'helvetica neue', helvetica, arial, sans-serif;
 
   --measure: 60ch;
 
@@ -29,7 +29,7 @@
   --font-size-xs:   calc(var(--font-size-s) / var(--ratio));
   --font-size-s:    calc(var(--font-size-m) / var(--ratio));
 
-  --font-size-m:    1rem;
+  --font-size-m:    1.1rem;
 
   --font-size-l:    calc(var(--font-size-m) * var(--ratio));
   --font-size-xl:   calc(var(--font-size-l) * var(--ratio));
