--- a/src/sass/_02-elements/_links.scss
+++ b/src/sass/_02-elements/_links.scss
@@ -4,7 +4,7 @@
 
 a {
   // box-shadow: inset 0px -0.2rem 0 var(--colour-primary-500);
-  color:  var(--blue-300);
+  color: blue;
   text-decoration: none;
   text-decoration-skip: ink;
 
@@ -12,7 +12,7 @@ a {
 }
 
   a:visited {
-    color: inherit;
+    color: blue;
   }
 
   a:hover {
