--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -16,8 +16,8 @@
   --spacing-3xl: 4rem;  
 
 
-  --font-base: 'Rubik', 'helvetica neue', helvetica, arial, sans-serif;
-  --font-accent: 'Rubik', 'helvetica neue', helvetica, arial, sans-serif;
+  --font-base: Georgia, serif;
+  --font-accent: Arial, 'helvetica neue', helvetica, arial, sans-serif;
 
   --measure: 60ch;
 
