--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,8 +1,7 @@
 {% include "partials/masterHead.njk" %}
 
 <body>
-
-	<main> 
+  {% include "nav.njk" %}	<main> 
 	{% block main %}
 		<article class="o-box o-centre">
 			<h1>{{ title }}</h1>
