Amended structure to show nested pages properly.

--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -8,11 +8,14 @@
 
     {% for page in collections.pages %}
     <li>
+      {% if currentUrl === page.url %}<strong>{% endif %}
       <a 
         {% if currentUrl === page.url %}aria-current="page"{% endif %} 
-        href="{{ page.url }}">
-          {{ page.data.title }}
+        href="{{ page.url }}"
+      >
+        {{ page.data.title }}
       </a>
+      {% if currentUrl === page.url %}</strong>{% endif %}
     </li>
     {%- endfor %}
   </ul>
