Added some mildly opinionated but minimal styles.

--- a/src/scss/_02-elements/_headings.scss
+++ b/src/scss/_02-elements/_headings.scss
@@ -13,9 +13,11 @@ h5,
 h6 {
   color: var(--grey-900);
   font-family: var(--font-accent);
+  line-height: var(--line-height-xs);
 }
 
 h1 {
+  font-family: var(--font-accent);
   font-size: var(--font-size-3xl);
   letter-spacing: -0.02em;
 }
