--- a/src/scss/_01-globals/globals.scss
+++ b/src/scss/_01-globals/globals.scss
@@ -16,29 +16,29 @@ ol {
 }
 
 /* Remove default margin */
-// body,
-// h1,
-// h2,
-// h3,
-// h4,
-// h5,
-// h6,
-// p,
-// ul,
-// ol,
-// li,
-// figure,
-// figcaption,
-// blockquote,
-// dl,
-// dd {
-//   margin: 0;
-// }
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
 
 body {
-  // background-color: hsl(0, 0%, 100%);
-  // font-family: var(--font-base);
-  font-size: clamp(var(--font-size-m), 1.8vw, var(--font-size-l));
+  background-color: hsl(0, 0%, 100%);
+  font-family: var(--font-base);
+  // font-size: clamp(var(--font-size-m), 1.8vw, var(--font-size-l));
   line-height: 1.5;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
@@ -103,4 +103,10 @@ img[height] {  /* [1] */
 figcaption {
   font-size: 0.9rem;
   font-style: italic;
+}
+
+code {
+  background-color: #{'hsl(0, 0%, 90%)'};
+  border-radius: 4px;
+  padding: 1px 5px 3px;
 }
