--- a/src/scss/_04-components/_nav-primary.scss
+++ b/src/scss/_04-components/_nav-primary.scss
@@ -11,7 +11,7 @@ NAV Primary
 }
 
   .c-nav-primary a {
-    // text-decoration: none;
+    text-decoration: none;
     
     &[aria-current="page"] {
       font-weight: bold;
