--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -19,7 +19,7 @@
   --font-base: Georgia, serif;
   --font-accent: Arial, 'helvetica neue', helvetica, arial, sans-serif;
 
-  --measure: 60ch;
+  --measure: 68ch;
 
 
   /* Font sizes */
@@ -29,7 +29,7 @@
   --font-size-xs:   calc(var(--font-size-s) / var(--ratio));
   --font-size-s:    calc(var(--font-size-m) / var(--ratio));
 
-  --font-size-m:    1.1rem;
+  --font-size-m:    1rem;
 
   --font-size-l:    calc(var(--font-size-m) * var(--ratio));
   --font-size-xl:   calc(var(--font-size-l) * var(--ratio));
@@ -39,7 +39,19 @@
   --font-size-5xl:  calc(var(--font-size-4xl) * var(--ratio));
 
 
-  /* Flow space */
+  /* Line heights */
+  --line-height-none:   1;
+  --line-height-xs:     1.1;
+  // --line-height-s:      1.375;
+
+  --line-height-normal: 1.5;
+
+  // --line-height-l:      1.625;
+  // --line-height-xl:     2;
+  // --line-height-2xl:    2.5;
+  // --line-height-3xl:    3;
+  
+    /* Flow space */
   --flow-space: 1.5em;
 
   /* Greyscale */
