--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,30 +17,30 @@
 
 
 /* GLOBALS */
-// @import "_01-globals/globals";
-// @import "_01-globals/normalize";
+@import "_01-globals/globals";
+@import "_01-globals/normalize";
 
 
 
 /* ELEMENTS */
-// @import "_02-elements/headings";
-// @import "_02-elements/links";
-// @import "_02-elements/lists";
+@import "_02-elements/headings";
+@import "_02-elements/links";
+@import "_02-elements/lists";
 // @import "_02-elements/typography";
 
 
 
 /* OBJECTS */
-// @import "_03-objects/box";
-// @import "_03-objects/centre";
-// @import "_03-objects/cluster";
+@import "_03-objects/box";
+@import "_03-objects/centre";
+@import "_03-objects/cluster";
 // @import "_03-objects/stack";
 
 
 
 
 /* COMPONENTS */
-// @import "_04-components/nav-primary";
+@import "_04-components/nav-primary";
 
 
 
