More default stuff

--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -1,7 +1,7 @@
 {% set currentUrl %}{{ page.url }}{% endset %}
 
-<nav class="o-box o-centre o-cluster">
-  <ul class="c-nav-primary" role="list">
+<nav class="background-color:black">
+  <ul class="o-box o-cluster o-centre c-nav-primary" role="list">
     <li>
       <a {% if currentUrl === '/' %}aria-current="page"{% endif %} href="/">Home</a>
     </li>
