--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -16,8 +16,8 @@
   --spacing-3xl: 4rem;  
 
 
-  --font-base: Georgia, serif;
-  --font-accent: Arial, 'helvetica neue', helvetica, arial, sans-serif;
+  --font-base: 'Mona Sans', serif;
+  --font-accent: 'Mona Sans', 'helvetica neue', helvetica, arial, sans-serif;
 
   --measure: 68ch;
 
