--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,7 +26,7 @@
 @import "_02-elements/headings";
 @import "_02-elements/links";
 @import "_02-elements/lists";
-// @import "_02-elements/typography";
+@import "_02-elements/typography";
 
 
 
@@ -46,5 +46,6 @@
 
 
 /* UTILITIES */
+@import "_05-utilities/colours";
 // @import "_05-utilities/spacing";
 // @import "_05-utilities/widths";
