--- a/src/_includes/partials/masterHead.njk
+++ b/src/_includes/partials/masterHead.njk
@@ -6,5 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{{ title }} - {{ meta.siteName }}</title>
 	<meta name="description" content="{{pageDescription}}" />
+	<link rel="preload" href="../fonts/Mona/Mona-Sans.woff2" as="font" type="font/woff2" crossorigin>
+	{# <link rel="preload" href="../fonts/Hubot/Hubot-Sans.woff2" as="font" type="font/woff2" crossorigin> #}
 	<link rel="stylesheet" href="{{ '/css/main.css' | url }}" />
 </head>
