--- a/src/scss/_01-globals/globals.scss
+++ b/src/scss/_01-globals/globals.scss
@@ -38,7 +38,8 @@ dd {
 body {
   background-color: hsl(0, 0%, 100%);
   font-family: var(--font-base);
-  // font-size: clamp(var(--font-size-m), 1.8vw, var(--font-size-l));
+  font-weight: 400;
+  font-size: clamp(var(--font-size-m), 1.8vw, var(--font-size-l));
   line-height: 1.5;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
