--- a/src/scss/_03-objects/_centre.scss
+++ b/src/scss/_03-objects/_centre.scss
@@ -4,7 +4,6 @@
 
 .o-centre {
   box-sizing: content-box;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: var(--measure);
+  margin-inline: auto;
+  max-inline-size: var(--measure);
 }
