--- a/src/scss/_02-elements/_typography.scss
+++ b/src/scss/_02-elements/_typography.scss
@@ -11,4 +11,5 @@ TYPOGRAPHY
     url('../fonts/Mona/Mona-Sans.woff2') format('woff2-variations');
     font-weight: 200 900;
     font-stretch: 75% 125%;
+  font-display: swap;
 }
