--- a/src/css/_vars.css
+++ b/src/css/_vars.css
@@ -5,7 +5,7 @@
 
 
 :root {
-  // Units. These can be used for anything.
+  /* Units. These can be used for anything. */
   --spacing-2xs: 0.1rem;  
   --spacing-xs: 0.25rem;    
   --spacing-s: 0.5rem;      
@@ -16,8 +16,8 @@
   --spacing-3xl: 4rem;  
 
 
-  --font-base: 'Mona Sans', serif;
-  --font-accent: 'Mona Sans', 'helvetica neue', helvetica, arial, sans-serif;
+  --font-base: "system-ui", serif;
+  --font-accent: "system-ui", serif;
 
   --measure: 68ch;
 
@@ -42,14 +42,14 @@
   /* Line heights */
   --line-height-none:   1;
   --line-height-xs:     1.1;
-  // --line-height-s:      1.375;
+  /* --line-height-s:      1.375; */
 
   --line-height-normal: 1.5;
 
-  // --line-height-l:      1.625;
-  // --line-height-xl:     2;
-  // --line-height-2xl:    2.5;
-  // --line-height-3xl:    3;
+  /* --line-height-l:      1.625; */
+  /* --line-height-xl:     2; */
+  /* --line-height-2xl:    2.5; */
+  /* --line-height-3xl:    3; */
   
     /* Flow space */
   --flow-space: 1.5em;
