Basic 'kitchen sink'

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,7 +27,7 @@
 @import "_02-elements/images";
 @import "_02-elements/links";
 @import "_02-elements/lists";
-@import "_02-elements/typography";
+// @import "_02-elements/typography";
 
 
 
