--- a/src/scss/_02-elements/_lists.css
+++ b/src/scss/_02-elements/_lists.css
@@ -4,7 +4,8 @@
 ===========================================*/
 
 /* Targets all <ul>s with no class (mainly for body copy) */
-ul:not([class]) {
+ul:not([class]),
+ol:not([class]) {
   margin-left: var(--spacing-m);
   
 }
