--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,11 +23,14 @@
 
 
 /* ELEMENTS */
+@import "_02-elements/blockquote";
+@import "_02-elements/code";
 @import "_02-elements/headings";
 @import "_02-elements/images";
 @import "_02-elements/links";
 @import "_02-elements/lists";
-// @import "_02-elements/typography";
+@import "_02-elements/pre";
+@import "_02-elements/tables";
 
 
 
