Stripped out less common HTML elements

--- a/src/scss/_02-elements/_tables.css
+++ b/src/scss/_02-elements/_tables.css
@@ -10,6 +10,7 @@ table {
   th, td {
     border: 1px solid var(--black);
     padding: var(--spacing-s);
+    vertical-align: top;
   }  
 
   th {
