--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,6 +25,7 @@
 /* ELEMENTS */
 @import "_02-elements/blockquote";
 @import "_02-elements/code";
+@import "_02-elements/forms";
 @import "_02-elements/headings";
 @import "_02-elements/images";
 @import "_02-elements/links";
@@ -44,6 +45,7 @@
 
 
 /* COMPONENTS */
+@import "_04-components/button";
 @import "_04-components/nav-primary";
 
 
