--- a/src/scss/_vars.css
+++ b/src/scss/_vars.css
@@ -14,6 +14,11 @@
   --spacing-2xl: 3rem;  
   --spacing-3xl: 4rem;  
 
+  /* Border radius */
+  --border-radius-xs: var(--spacing-xs);
+  --border-radius-s: var(--spacing-s);
+  --border-radius: var(--spacing-m);
+
 
   --font-base: "system-ui", serif;
   --font-accent: "system-ui", serif;
@@ -49,11 +54,26 @@
   /* Greyscale */
   --white:    hsla(0,0%,100%,1);
 
-  --grey-96:  hsla(0, 0%, 96%,1);
-  --grey-90:  hsla(0, 0%, 90%,1);
-  --grey-70:  hsla(0, 0%, 70%,1);
-  --grey-50:  hsla(0,0%,50%,1);
-  --grey-30:  hsla(0,0%,30%,1);
+  /*
+  --grey-100:  hsla(0, 0%, 96%,1);
+  --grey-300:  hsla(0,0%,30%,1);
+  --grey-500: hsla(0,0%,50%,1);
+  --grey-700:  hsla(0, 0%, 70%,1);
+  --grey-900:  hsla(0, 0%, 90%,1);
+  */
+
+
+  /*
+  */
+  --grey-100:   hsla(214,10%,96%,1);  
+  --grey-200:   hsla(214,10%,90%,1);
+  --grey-300:   hsla(214,10%,75%,1);
+  --grey-400:   hsla(214,10%,65%,1);
+  --grey-500:   hsla(214,10%,50%,1);
+  --grey-600:   hsla(214,10%,45%,1);
+  --grey-700:   hsla(214,10%,40%,1);
+  --grey-800:   hsla(214,10%,30%,1);
+  --grey-900:   hsla(214,15%,20%,1);
 
   --black:    hsla(0,0%,0%,1);       
 }
