--- a/src/scss/_02-elements/_code.css
+++ b/src/scss/_02-elements/_code.css
@@ -2,9 +2,22 @@
 ===========================================
 ===========================================*/
 
-code {
-  background-color: var(--grey-90);
-  border-radius: var(--spacing-xs);
-  font-size: var(--font-size-m);
-  padding: var(--spacing-2xs) var(--spacing-xs) var(--spacing-xs);
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  font-size: 0.9em;
 }
+
+code {
+  background-color: var(--color-code-background);
+  color: var(--color-code-text);
+  border-radius: 4px;
+  padding: 1px 5px 3px;
+}
+
+pre > code {
+  background-color: transparent;
+  color: var(--grey-200);
+}
+
