--- a/src/scss/_05-utilities/_type-scale.scss
+++ b/src/scss/_05-utilities/_type-scale.scss
@@ -10,8 +10,8 @@
   font-size: var(--font-size-s);
 }
 
-.font-size\:m {
-  font-size: var(--font-size-m);
+.font-size\:base {
+  font-size: var(--font-size-base);
 }
 
 .font-size\:l {
