--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,14 +11,14 @@
 
 
 /* VARIABLES */
-@import "_vars";
-
+@import"_vars";
 
 
 
 /* GLOBALS */
+@import "_01-globals/reset";
 @import "_01-globals/globals";
-@import "_01-globals/normalize";
+@import "_01-globals/themes";
 
 
 
@@ -27,7 +27,6 @@
 @import "_02-elements/code";
 @import "_02-elements/forms";
 @import "_02-elements/headings";
-@import "_02-elements/images";
 @import "_02-elements/links";
 @import "_02-elements/lists";
 @import "_02-elements/pre";
@@ -37,22 +36,16 @@
 
 /* OBJECTS */
 @import "_03-objects/box";
-@import "_03-objects/centre";
 @import "_03-objects/cluster";
-/* @import "_03-objects/stack"; */
-
-
+@import "_03-objects/flex";
+@import "_03-objects/wrapper";
 
 
 /* COMPONENTS */
-@import "_04-components/button";
-@import "_04-components/card";
+@import "_04-components/buttons";
+@import "_04-components/cards";
+// @import "../_includes/macros/Cards/cards";
 @import "_04-components/nav-primary";
 
-
-
-
 /* UTILITIES */
-@import "_05-utilities/colours";
-/* @import "_05-utilities/spacing";
-@import "_05-utilities/widths"; */
+@import "_05-utilities/spacing";
