--- a/src/scss/_02-elements/_headings.css
+++ b/src/scss/_02-elements/_headings.css
@@ -1,9 +1,6 @@
-/*------------------------------------*\
-    $HEADINGS
-\*------------------------------------*/
-/**
- * This is where we set the headings
- */
+/* HEADINGS
+===========================================
+===========================================*/
 
 h1,
 h2,
@@ -11,27 +8,29 @@ h3,
 h4,
 h5,
 h6 {
-  color: var(--black);
   font-family: var(--font-accent);
   line-height: var(--line-height-xs);
+  text-wrap: balance;
 }
 
 h1 {
-  font-family: var(--font-accent);
-  font-size: var(--font-size-4xl);
+  font-size: var(--font-size-2xl);
+  letter-spacing: -0.04em;
   font-weight: 700;
 }
 
 h2 {
-  font-size: var(--font-size-2xl);
+  font-size: var(--font-size-xl);
+  font-weight: 700;
+  letter-spacing: -0.008em;
 }
 
 h3 {
-  font-size: var(--font-size-xl);
+  font-size: var(--font-size-l);
 }
 
 h4 {
-  font-size: var(--font-size-l);
+  font-size: var(--font-size-m);
 }
 
 h5 {
