--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -10,7 +10,7 @@ layout: base.njk
 
 {% block main %}
 
-  <article class="o-wrapper p-l">
+  <article class="o-wrapper p-base">
     {{ content | safe }}
   </article>
 {% endblock %}
