--- a/src/scss/_02-elements/_pre.css
+++ b/src/scss/_02-elements/_pre.css
@@ -4,6 +4,7 @@
 
 pre {
   background-color: var(--grey-900);
+  color: var(--grey-100);
   border-radius: var(--spacing-s);
   padding: var(--spacing-l);
   white-space: pre-wrap;
