--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -8,12 +8,14 @@ layout: base.njk
   {% endblock %}
 </header>
 
+<main>
 {% block main %}
 
   <article class="o-wrapper p-base">
     {{ content | safe }}
   </article>
 {% endblock %}
+</main>
 
 {% block footer %}
   {# {% include "partials/footer.njk" %} #}
