--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -7,11 +7,10 @@
     <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
     <title>{{ title }}</title>
   </head>
-  <body>
-    <main> 
-      {% block main %}
-        {{ content | safe }}
-      {% endblock %}
-    </main> 
+  <body data-js-enabled="false">
+    {% block main %}
+      {{ content | safe }}
+    {% endblock %}
   </body>
+  {# <script src="/js/main.js" ></script> #}
 </html>
